[gd_scene load_steps=6 format=3 uid="uid://ch86og1iw24ou"]

[ext_resource type="Script" uid="uid://mkyru4jlo66i" path="res://Main/Player/Tools/tool_base.gd" id="1_dy3h0"]

[sub_resource type="Animation" id="Animation_dy3h0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t5pqn"]
resource_name = "retrieve"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector3(0, -0.1, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8tdf6"]
resource_name = "save"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dy3h0"]
_data = {
&"RESET": SubResource("Animation_dy3h0"),
&"retrieve": SubResource("Animation_t5pqn"),
&"save": SubResource("Animation_8tdf6")
}

[node name="ToolBase" type="Node3D"]
top_level = true
script = ExtResource("1_dy3h0")

[node name="cooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dy3h0")
}

[node name="Sprite3D" type="Sprite3D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 0

[node name="VFX" type="Node3D" parent="."]

[node name="SFX" type="Node3D" parent="."]

[node name="equippedMarkerPosition" type="Marker3D" parent="."]
unique_name_in_owner = true
top_level = true

[node name="debugCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
top_level = true

[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timer_timeout"]
